// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render a modal when not previewing 1`] = `
.c1 {
  min-width: 115px;
  max-width: calc(20% - 1.5em);
  margin: 0.75em;
  -webkit-flex: 1 1 calc(20% - 1.5em);
  -ms-flex: 1 1 calc(20% - 1.5em);
  flex: 1 1 calc(20% - 1.5em);
}

.c1 img {
  width: 100%;
}

.c1 figcaption {
  position: relative;
  font-size: 80%;
  max-height: 3.75em;
  line-height: 1.25em;
  overflow: hidden;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .counts {
  display: inline-block;
  width: 75%;
  padding: 0.75em;
}

.c0 .select {
  display: inline-block;
  width: 25%;
  padding: 0.75em;
  text-align: right;
}

.c0 .select a {
  margin: 0 0.25em;
}

.c0 .results {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

<div
  className="c0"
>
  <div
    className="results"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <img
        alt="Soup Can"
        src="can.jpg"
      />
      <figcaption>
        Soup Can
      </figcaption>
    </div>
    <div
      className="c1"
      onClick={[Function]}
    >
      <img
        alt="Shark"
        src="shark.jpg"
      />
      <figcaption>
        Shark
      </figcaption>
    </div>
  </div>
</div>
`;

exports[`renders a collection of artworks 1`] = `
.c1 {
  min-width: 115px;
  max-width: calc(20% - 1.5em);
  margin: 0.75em;
  -webkit-flex: 1 1 calc(20% - 1.5em);
  -ms-flex: 1 1 calc(20% - 1.5em);
  flex: 1 1 calc(20% - 1.5em);
}

.c1 img {
  width: 100%;
}

.c1 figcaption {
  position: relative;
  font-size: 80%;
  max-height: 3.75em;
  line-height: 1.25em;
  overflow: hidden;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .counts {
  display: inline-block;
  width: 75%;
  padding: 0.75em;
}

.c0 .select {
  display: inline-block;
  width: 25%;
  padding: 0.75em;
  text-align: right;
}

.c0 .select a {
  margin: 0 0.25em;
}

.c0 .results {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

<div
  className="c0"
>
  <div
    className="results"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <img
        alt="Soup Can"
        src="can.jpg"
      />
      <figcaption>
        Soup Can
      </figcaption>
    </div>
    <div
      className="c1"
      onClick={[Function]}
    >
      <img
        alt="Shark"
        src="shark.jpg"
      />
      <figcaption>
        Shark
      </figcaption>
    </div>
  </div>
</div>
`;

exports[`renders a modal when previewing 1`] = `
.c1 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: hsla(0,0%,0%,0.5);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  padding: 2em;
  max-height: 90%;
  z-index: 2;
  background: white;
  box-shadow: 0 0 20px hsla(0,0%,0%,0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 .image {
  -webkit-flex: 0 1 40%;
  -ms-flex: 0 1 40%;
  flex: 0 1 40%;
}

.c2 .details {
  max-width: 20em;
  margin-left: 1em;
  -webkit-flex: 0 1 60%;
  -ms-flex: 0 1 60%;
  flex: 0 1 60%;
}

.c2 .name {
  font-weight: bold;
}

.c2 .status {
  font-size: 0.9em;
  line-height: 125%;
  margin: 1em 0;
}

.c2 .links a {
  margin: 0 0.25em;
}

.c3 {
  min-width: 115px;
  max-width: calc(20% - 1.5em);
  margin: 0.75em;
  -webkit-flex: 1 1 calc(20% - 1.5em);
  -ms-flex: 1 1 calc(20% - 1.5em);
  flex: 1 1 calc(20% - 1.5em);
}

.c3 img {
  width: 100%;
}

.c3 figcaption {
  position: relative;
  font-size: 80%;
  max-height: 3.75em;
  line-height: 1.25em;
  overflow: hidden;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .counts {
  display: inline-block;
  width: 75%;
  padding: 0.75em;
}

.c0 .select {
  display: inline-block;
  width: 25%;
  padding: 0.75em;
  text-align: right;
}

.c0 .select a {
  margin: 0 0.25em;
}

.c0 .results {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    z={1}
  >
    <div
      className="c2"
      onClickCapture={[Function]}
    >
      <div
        className="image"
      >
        <img
          alt="Soup Can"
          src="can.jpg"
        />
      </div>
      <div
        className="details"
      >
        <p
          className="name"
        >
          Soup Can
        </p>
        <p
          className="status"
        >
          Deleted: 
          false
           
          <br />
          Published: 
          true
           
          <br />
          Genomed: 
          true
        </p>
        <p
          className="links"
        >
          View artwork in:
          <a
            href="https://helix.artsy.net/genome/artworks?artwork_ids=can"
            target="_blank"
          >
            Helix
          </a>
          |
          <a
            href="https://cms.artsy.net/artworks/can/edit?current_partner_id=undefined"
            target="_blank"
          >
            CMS
          </a>
          |
          <a
            href="https://www.artsy.net/artwork/can"
            target="_blank"
          >
            Artsy.net
          </a>
        </p>
        <p
          className="links"
        >
          View artist in:
          <a
            href="https://helix.artsy.net/genome/artist?search[genome_artist_id]=undefined"
            target="_blank"
          >
            Helix
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    className="results"
  >
    <div
      className="c3"
      onClick={[Function]}
    >
      <img
        alt="Soup Can"
        src="can.jpg"
      />
      <figcaption>
        Soup Can
      </figcaption>
    </div>
    <div
      className="c3"
      onClick={[Function]}
    >
      <img
        alt="Shark"
        src="shark.jpg"
      />
      <figcaption>
        Shark
      </figcaption>
    </div>
  </div>
</div>
`;

exports[`renders a spinner while fetching artworks 1`] = `
.c3 {
  min-width: 115px;
  max-width: calc(20% - 1.5em);
  margin: 0.75em;
  -webkit-flex: 1 1 calc(20% - 1.5em);
  -ms-flex: 1 1 calc(20% - 1.5em);
  flex: 1 1 calc(20% - 1.5em);
}

.c3 img {
  width: 100%;
}

.c3 figcaption {
  position: relative;
  font-size: 80%;
  max-height: 3.75em;
  line-height: 1.25em;
  overflow: hidden;
}

.c1 {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  height: calc(100vh - 50px);
  background: hsla(0,0%,100%,0.90);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c2 {
  width: 12%;
  height: 1%;
  background: black;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  z-index: 2;
  -webkit-animation: MQNGw 2s linear infinite;
  animation: MQNGw 2s linear infinite;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .counts {
  display: inline-block;
  width: 75%;
  padding: 0.75em;
}

.c0 .select {
  display: inline-block;
  width: 25%;
  padding: 0.75em;
  text-align: right;
}

.c0 .select a {
  margin: 0 0.25em;
}

.c0 .results {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="black"
    />
  </div>
  <div
    className="results"
  >
    <div
      className="c3"
      onClick={[Function]}
    >
      <img
        alt="Soup Can"
        src="can.jpg"
      />
      <figcaption>
        Soup Can
      </figcaption>
    </div>
    <div
      className="c3"
      onClick={[Function]}
    >
      <img
        alt="Shark"
        src="shark.jpg"
      />
      <figcaption>
        Shark
      </figcaption>
    </div>
  </div>
</div>
`;
